--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-elastic-carousel": "^0.11.0",
     "react-helmet": "^5.2.1",
+    "react-slider": "^1.1.2",
+    "react-star-ratings": "^2.3.0",
     "react-syntax-highlighter": "^12.2.1",
-    "react-virtualized": "^9.21.2"
+    "react-virtualized": "^9.21.2",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.10",
@@ -36,6 +40,7 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.7",
+    "@types/react-slider": "^1.1.0",
     "@types/react-syntax-highlighter": "^11.0.4",
     "@types/react-virtualized": "^9.21.10",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
