--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^16.12.0",
     "react-elastic-carousel": "^0.11.0",
     "react-helmet": "^5.2.1",
+    "react-paginate": "^7.0.0",
     "react-slider": "^1.1.2",
     "react-star-ratings": "^2.3.0",
     "react-syntax-highlighter": "^12.2.1",
