--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "clsx": "^1.1.1",
     "effector": "^20.16.2",
     "effector-react": "^20.7.4",
     "effector-react-form": "^2.0.21",
@@ -24,10 +25,12 @@
     "lodash.isequal": "^4.5.0",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^16.12.0",
     "react-elastic-carousel": "^0.11.0",
     "react-helmet": "^5.2.1",
     "react-paginate": "^7.0.0",
+    "react-responsive-modal": "^6.0.1",
     "react-slider": "^1.1.2",
     "react-star-ratings": "^2.3.0",
     "react-syntax-highlighter": "^12.2.1",
